--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,8 @@ auto-ksp = "dev.zacsweers.autoservice:auto-service-ksp:1.1.0"
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 junit-legacy = "junit:junit:4.13.2"
+kct = "dev.zacsweers.kctfork:core:0.3.0"
 kotlin-compiler = { module = "org.jetbrains.kotlin:kotlin-compiler-embeddable", version.ref = "kotlin" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin"}
-kct = "dev.zacsweers.kctfork:core:0.3.0"
+mordant = "com.github.ajalt.mordant:mordant:2.1.0"
 truth = "com.google.truth:truth:1.1.5"
