--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ ksp = "com.google.devtools.ksp:1.9.0-1.0.13"
 spotless = "com.diffplug.spotless:6.20.0"
 
 [libraries]
+android-gradle-plugin = "com.android.tools.build:gradle:8.0.0"
 auto-annotations = "com.google.auto.service:auto-service-annotations:1.1.1"
 auto-ksp = "dev.zacsweers.autoservice:auto-service-ksp:1.1.0"
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
