--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -31,6 +31,12 @@ jobs:
         distribution: temurin
         java-version: 18
 
+    - name: Cache Kotlin/Native compiler
+      uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
+      with:
+        path: ~/.konan
+        key: ${{ runner.os }}-gradle-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties', 'gradle/libs.versions.toml') }}
+
     - name: Run unit tests
       uses: gradle/gradle-build-action@243af859f8ca30903d9d7f7936897ca0358ba691 # v2.7.1
       with:
