--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,21 @@
 kotlin.code.style=official
+# Library Information
+GROUP=dev.msfjarvis.tracelog
+VERSION_NAME=0.1.0-SNAPSHOT
+# Maven central
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
+SONATYPE_AUTOMATIC_RELEASE=true
+# POM URL config
+POM_URL=https://github.com/msfjarvis/tracelog
+POM_SCM_URL=https://github.com/msfjarvis/tracelog/
+POM_SCM_CONNECTION=scm:git:git://github.com/msfjarvis/tracelog.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/msfjarvis/tracelog.git
+# POM licence
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+# POM developer
+POM_DEVELOPER_ID=msfjarvis
+POM_DEVELOPER_NAME=Harsh Shandilya
+POM_DEVELOPER_URL=https://msfjarvis.dev
