refactor(build): realign to Kotlin 1.9.0

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -20,10 +20,12 @@
     {
       "matchPackageNames": [
         "com.google.devtools.ksp",
-        "org.jetbrains.kotlin:kotlin-gradle-plugin",
         "org.jetbrains.kotlin:kotlin-compiler-embeddable",
+        "org.jetbrains.kotlin:kotlin-gradle-plugin",
+        "org.jetbrains.kotlin:kotlin-gradle-plugin-api",
       ],
       "groupName": "Kotlin",
+      "enabled": false,
     },
   ],
 }
