--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,9 @@
 [versions]
 junit = "5.10.0"
-kotlin = "1.9.10"
 
 [plugins]
 buildconfig = "com.github.gmazzo.buildconfig:4.1.2"
-ksp = "com.google.devtools.ksp:1.9.10-1.0.13"
+ksp = "com.google.devtools.ksp:1.9.0-1.0.13"
 spotless = "com.diffplug.spotless:6.20.0"
 
 [libraries]
@@ -15,7 +14,9 @@ junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.re
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 junit-legacy = "junit:junit:4.13.2"
 kct = "dev.zacsweers.kctfork:core:0.3.2"
-kotlin-compiler = { module = "org.jetbrains.kotlin:kotlin-compiler-embeddable", version.ref = "kotlin" }
-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin"}
+kotlin-compiler = { module = "org.jetbrains.kotlin:kotlin-compiler-embeddable" }
+kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin" }
+kotlin-gradlePlugin-api = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin-api" }
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib" }
 mordant = "com.github.ajalt.mordant:mordant:2.1.0"
 truth = "com.google.truth:truth:1.1.5"
