feat: refactor build and flesh out Gradle plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=msfjarvis
 POM_DEVELOPER_NAME=Harsh Shandilya
 POM_DEVELOPER_URL=https://msfjarvis.dev
+tracelog.internal.project-dependency=true
