--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,6 +15,7 @@
       registryUrls: [
         "https://repo1.maven.org/maven2",
         "https://plugins.gradle.org/m2/",
+        "https://maven.google.com/",
       ],
     },
     {
@@ -23,6 +24,10 @@
         "org.jetbrains.kotlin:kotlin-compiler-embeddable",
         "org.jetbrains.kotlin:kotlin-gradle-plugin",
         "org.jetbrains.kotlin:kotlin-gradle-plugin-api",
+        "org.jetbrains.kotlin:kotlin-stdlib",
+        "org.jetbrains.kotlin.android",
+        "org.jetbrains.kotlin.jvm",
+        "org.jetbrains.kotlin.multiplatform",
       ],
       "groupName": "Kotlin",
       "enabled": false,
