--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,7 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       actions: read
-      contents: write
     steps:
     - name: Checkout repository
       uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
@@ -49,3 +48,43 @@ jobs:
 
     - name: Run unit tests
       run: ./gradlew check
+
+  publish-release:
+    if: "github.event_name == 'push' && github.event.ref == 'refs/heads/main'"
+    needs:
+      - "check"
+    runs-on: macos-13
+    permissions:
+      actions: read
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+      with:
+        fetch-depth: 0
+
+    - name: Set up JDK
+      uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2 # v3.12.0
+      with:
+        distribution: temurin
+        java-version: 18
+
+    - name: Cache Kotlin/Native compiler
+      uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
+      with:
+        path: ~/.konan
+        key: ${{ runner.os }}-gradle-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties', 'gradle/libs.versions.toml') }}
+
+    - name: Setup Gradle caching
+      uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc # v2.8.0
+      with:
+        gradle-home-cache-cleanup: true
+        cache-read-only: ${{ github.ref != 'refs/heads/main' }}
+        dependency-graph: generate-and-submit
+
+    - name: Publish to Maven Central
+      run: ./gradlew -x test -x lint publish :gradle-plugin:publish
+      env:
+        ORG_GRADLE_PROJECT_mavenCentralUsername : ${{ secrets.SONATYPE_NEXUS_USERNAME }}
+        ORG_GRADLE_PROJECT_mavenCentralPassword : ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
+        ORG_GRADLE_PROJECT_signingInMemoryKey : ${{ secrets.NEXUS_PUBLISH_SIGNING_KEY }}
+        ORG_GRADLE_PROJECT_signingInMemoryKeyPassword : ${{ secrets.NEXUS_PUBLISH_SIGNING_KEY_PASSWORD }}
