--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Publish to Maven Central
       run: ./gradlew -x test -x lint publish :gradle-plugin:publish
       env:
-        ORG_GRADLE_PROJECT_mavenCentralUsername : ${{ secrets.SONATYPE_NEXUS_USERNAME }}
-        ORG_GRADLE_PROJECT_mavenCentralPassword : ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
+        SONATYPE_USERNAME: msfjarvis
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
         ORG_GRADLE_PROJECT_signingInMemoryKey : ${{ secrets.NEXUS_PUBLISH_SIGNING_KEY }}
         ORG_GRADLE_PROJECT_signingInMemoryKeyPassword : ${{ secrets.NEXUS_PUBLISH_SIGNING_KEY_PASSWORD }}
