--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048m
 kotlin.code.style=official
 # Library Information
 GROUP=dev.msfjarvis.tracelog
-VERSION_NAME=0.2.0-SNAPSHOT
+VERSION_NAME=0.1.1
 # Maven central
 RELEASE_SIGNING_ENABLED=true
 # POM URL config
