fix(release): add missing POM metadata

--- a/gradle-plugin/gradle.properties
+++ b/gradle-plugin/gradle.properties
@@ -1,2 +1,4 @@
-POM_ARTIFACT_ID=gradle-plugin
 kotlin.stdlib.default.dependency=false
+POM_ARTIFACT_ID=gradle-plugin
+POM_NAME=TraceLog Gradle Plugin
+POM_DESCRIPTION=Gradle plugin for TraceLog
