--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ kotlin.code.style=official
 GROUP=dev.msfjarvis.tracelog
 VERSION_NAME=0.2.0-SNAPSHOT
 # Maven central
+POM_INCEPTION_YEAR=2023
 RELEASE_SIGNING_ENABLED=true
 # POM URL config
 POM_URL=https://github.com/msfjarvis/tracelog
