--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048m
 kotlin.code.style=official
 # Library Information
 GROUP=dev.msfjarvis.tracelog
-VERSION_NAME=0.1.3
+VERSION_NAME=0.2.0-SNAPSHOT
 # Maven central
 POM_INCEPTION_YEAR=2023
 RELEASE_SIGNING_ENABLED=true
