--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref 
 kotlinx-binaryCompatibilityValidator = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version = "0.13.2" }
 ksp = "com.google.devtools.ksp:1.9.0-1.0.13"
 mavenPublish = { id = "com.vanniktech.maven.publish", version = "0.25.3" }
+shadow = "com.github.johnrengelman.shadow:8.1.1"
 spotless = "com.diffplug.spotless:6.21.0"
 
 [libraries]
