--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -34,10 +34,11 @@ jobs:
         path: ~/.konan
         key: ${{ runner.os }}-gradle-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties', 'gradle/libs.versions.toml') }}
 
-    - name: Setup Gradle caching
-      uses: gradle/gradle-build-action@ac2d340dc04d9e1113182899e983b5400c17cda1 # v3.5.0
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@94baf225fe0a508e581a564467443d0e2379123b # v4
       with:
-        gradle-home-cache-cleanup: true
+        add-job-summary: always
+        validate-wrappers: true
         cache-read-only: ${{ github.ref != 'refs/heads/main' }}
 
     - name: Publish compiler plugin to mavenLocal
@@ -70,10 +71,11 @@ jobs:
         path: ~/.konan
         key: ${{ runner.os }}-gradle-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties', 'gradle/libs.versions.toml') }}
 
-    - name: Setup Gradle caching
-      uses: gradle/gradle-build-action@ac2d340dc04d9e1113182899e983b5400c17cda1 # v3.5.0
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@94baf225fe0a508e581a564467443d0e2379123b # v4
       with:
-        gradle-home-cache-cleanup: true
+        add-job-summary: always
+        validate-wrappers: true
         cache-read-only: ${{ github.ref != 'refs/heads/main' }}
         dependency-graph: generate-and-submit
 
