--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,10 +38,14 @@ jobs:
         path: ~/.konan
         key: ${{ runner.os }}-gradle-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties', 'gradle/libs.versions.toml') }}
 
-    - name: Publish
-      uses: gradle/gradle-build-action@ac2d340dc04d9e1113182899e983b5400c17cda1 # v3.5.0
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@94baf225fe0a508e581a564467443d0e2379123b # v4
       with:
-        arguments: publish :gradle-plugin:publish
+        add-job-summary: always
+        validate-wrappers: true
+
+    - name: Publish
+      run: ./gradlew publish :gradle-plugin:publish
       env:
         ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.NEXUS_PUBLISH_SIGNING_KEY }}
         ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.NEXUS_PUBLISH_SIGNING_KEY_PASSWORD }}
